Final corrections (layout vertical overflow)

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   background: url(images/bg-mobile.svg), var(--violet);
   background-repeat: no-repeat;
   background-size: 100%;
-  color: #fff;
+  color: #f2f3f4;
   text-align: center;
   width: 100%;
   min-height: 100vh;
@@ -74,7 +74,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #fff;
+  color: #f2f3f4;
 }
 
 a:hover {
@@ -94,7 +94,7 @@ header {
 }
 
 .logo {
-  max-width: 40%;
+  width: 40%;
 }
 
 main {
@@ -110,7 +110,7 @@ main {
   cursor: pointer;
   transition: all 0.3s ease;
   border-radius: 20px;
-  background: #fff;
+  background: #f2f3f4;
   font-size: 0.8rem;
   border: none;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 6px -1px,
@@ -118,7 +118,7 @@ main {
 }
 .register-btn:hover {
   background: var(--softmagenta);
-  color: #fff;
+  color: #f2f3f4;
 }
 
 footer {
@@ -139,41 +139,47 @@ footer .fa-circle {
 
 @media screen and (min-width: 768px) {
   body {
+    font-size: 2vmin;
     background: url(images/bg-desktop.svg), var(--violet);
     background-size: cover;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   .container {
     grid-template-columns: minmax(0, 1.5fr) minmax(0, 1fr);
-    column-gap: 2rem;
+    gap: 1rem 1rem;
     height: calc(100vh - 2rem);
-    margin: 0 3rem;
+    margin: 1rem 3rem;
     align-content: center;
+    align-items: center;
   }
 
   header {
-    grid-area: 1 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
+    row-gap: 4rem;
+  }
+
+  .logo {
+    width: 30%;
   }
 
   main {
-    grid-area: 1 / 2 / 3 / 3;
+    grid-area: 1 / 2 / 2 / 3;
     justify-items: start;
     text-align: left;
-    align-self: center;
   }
 
   .register-btn {
-    font-size: 1rem;
+    font-size: 1em;
     padding: 0.7rem;
     width: 12rem;
   }
 
   footer {
-    grid-area: 3 / 1 / 4 / 3;
+    grid-area: 2 / 1 / 3 / 3;
     justify-self: end;
-    align-self: end;
   }
 }
 
